	  work with Samba-2.2.6 or later (required). For compability with
	  older Samba versions A new configure option --with-samba-sources=...
	  has been added to allow you to specify which Samba version the
	  helpers should be built for if different than the above versions.
	- Squid MIB definition syntax correction to work better with newer
	  (and older) SNMP tools
	  
Changes to squid-2.5.STABLE1 (September 25, 2002):

	- Major rewrite of proxy authentication to support other schemes
	  than basic. First in the line is NTLM support but others can
	  easily be added (minimal digest is present). See Programmers Guide.
	  (Robert Collins & Francesco Chemolli)
	- Reworked how request bodies are passed down to the protocols.
	  Now all client side processing is inside client_side.c, and
	  the pass and pump modules is no longer used.
	  used by Squid.
	- Optimized searching in proxy_auth and ident ACL types. Squid should
	  now handle large access lists a lot more efficiently.
	  (Francesco Chemolli)
	- Fixed forwarding/peer loop detection code (Brian Degenhardt) -
	  now a peer is ignored if it turns out to be us, rather than
	  committing suicide
	- Changed the internal URL code to obey appendDomain for internal
	  objects if it needs appending. This fixes weirdnesses where
	  a machine can think it is "foo.bar.com", and "foo" is requested.
	  (Brian Degenhardt)
	- Added the use of Automake to create the Makefile.in's in the squid
	  source tree. This will allow libtool in the future, and immediately
	  allows better dependency tracking - with or without gcc - as well
	  as the dist-all and distcheck targets for developers which respectively
	  build a tar.gz and a tar.bz2 distribution, and check that what will be
	  distributed builds.
	- Added TOS and source address selection based on ACLs,
	  written by Roger Venning. This allows administrators to set
	  the TOS precedence bits and/or the source IP from a set of